# kelasi

./: .env.example  .gitignore  INSTALL.md  README.md  db.sqlite3  gunicorn.conf.py  pyproject.toml
apps/academic/: models.py  urls.py  views.py
apps/accounts/: admin.py  apps.py  enums.py  managers.py  models.py  tests.py  urls.py  views.py
apps/attendance/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/core/: apps.py  constants.py  context_processors.py  managers.py  mixins.py  permissions.py  signals.py  test_factories.py  utils.py  views.py
apps/dashboard/: models.py  urls.py  views.py
apps/finance/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/forum/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/marketplace/: apps.py  models.py  models_wallet.py  signals.py  urls.py  views.py  views_wallet.py
apps/notifications/: models.py  urls.py  views.py
apps/parents/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/pedagogy/: apps.py  models.py  urls.py  views.py
apps/schedule/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/students/: admin.py  models.py  services.py  tests.py  urls.py  views.py
apps/validation/: models.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
requirements/: base.txt  dev.txt  prod.txt
static/js/: offline-db.js  sw-register.js  sw.js
templates/: test_minimal.html
templates/attendance/: _presence_row.html
templates/errors/: 403.html  404.html  500.html
(+140 files in other folders)
