[project]
name = "huduma"
version = "0.1.0"
description = "Huduma - Plateforme collaborative de gestion pedagogique et de commercialisation des contenus educatifs pour le College Saint Joseph/Elikya"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4",
]
